tests/NormalTests/paczka1/fuzzy1/91054907.err
Error in line 3: b1IsTau S254 916,4
Error in line 6: 79KmJpoQLD A414 94,1
Error in line 2: HclIOPll S254 70,5
Error in line 28: A832 S254 52,44
